[project]
name = "python-debug"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "moose-code", email = "jonjonclark@gmail.com" }
]
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.0.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.7.5",
    "sqlalchemy>=2.0.28",
    "psycopg2-binary>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "python_debug:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_debug"]
